--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,144 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  --color: #131752;
+  --color2: #7a81e9;
+  --gris: rgba(255, 255, 255, 0);
+  --gris2: #2d2e32;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 8px; /* Ancho del scrollbar */
+}
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color del fondo del scrollbar */
+}
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color del thumb del scrollbar */
+  border-radius: 15px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color del thumb del scrollbar al pasar el mouse sobre él */
+}
+
+body {
+  background-color: white;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  padding: 3% 5%;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+}
+
+nav > ul {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+
+nav ul li {
+  list-style: none;
+  position: relative;
+  transition: all 300ms ease;
+}
+
+nav > ul > li > a {
+  text-decoration: none;
+  color: var(--gris2);
+  transition: all 300ms ease;
+  font-size: 1em;
+  font-weight: 600;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+nav > ul > li:hover {
+  transform: scale(1.1);
+}
+
+nav > ul > li > a:hover {
+  color: var(--color2);
+  /* box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); */
+}
+
+.contenedor-intro {
+    margin-top: 7%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3% 0;
+  display: flex;
+  height: 70vh;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.452),
+      rgba(0, 0, 0, 0.452)
+    ),
+    url("images/code.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2% 5%;
+  width: 25%;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  background-color: var(--gris);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#Esteban {
+  width: 140px;
+  height: 140px;
+  animation: changeBorderRadius 3s ease-in-out infinite alternate;
+  border: 3px solid #2d2e32;
+  border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+}
+
+@keyframes changeBorderRadius {
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+  100% {
+    border-radius: 40% 60% 70% 30%/40% 70% 30% 60%;
+  }
+}
+
+.text {
+  padding: 10% 0;
+  text-align: center;
+  color: white;
+}
+
+.name {
+  font-size: 1.3em;
+}
+
+.desc {
+  font-size: 0.8em;
 }
