--- a/styles.css
+++ b/styles.css
@@ -11,29 +11,25 @@
   text-decoration: none;
   list-style: none;
 }
-
 ::-webkit-scrollbar {
-  width: 8px; /* Ancho del scrollbar */
+  width: 8px;
 }
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Color del fondo del scrollbar */
+  background-color: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #888; /* Color del thumb del scrollbar */
+  background-color: #888;
   border-radius: 15px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Color del thumb del scrollbar al pasar el mouse sobre él */
+  background-color: #555;
 }
-
 body {
-  background-color: white;
+  background-color: #fff;
 }
-
 header {
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
   display: flex;
   padding: 0% 5%;
@@ -45,58 +41,52 @@ header {
   transition: 0.5s;
   z-index: 10;
   text-align: center;
-  background-color: white;
+  background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.header ul {
 }
 
 #inicio {
   min-height: 100vh;
   height: 100vh;
 }
-
-#proyectos{
+#proyectos {
   min-height: 88.5vh;
   height: 88.5vh;
 }
-
-#habilidades{
+#habilidades {
   min-height: 88.5vh;
   height: 88.5vh;
-  background-color:antiquewhite;
+  background-color: antiquewhite;
 }
-
-#contacto{
+#contacto {
   min-height: 88.5vh;
   height: 88.5vh;
 }
-
 .section-padding {
   padding-top: 0 !important;
 }
-
 .nav {
   display: flex;
   flex-direction: row;
 }
-
 .icono {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
-
 nav > ul {
   display: flex;
   height: 100%;
   justify-content: center;
 }
-
 nav > ul > li {
   position: relative;
   transition: all 300ms ease;
 }
-
 nav > ul > li > a {
   color: var(--gris2);
   transition: all 300ms ease;
@@ -105,12 +95,10 @@ nav > ul > li > a {
   padding: 10px 20px;
   border-radius: 10px;
 }
-
 nav > ul > li > a.active,
 nav > ul > li > a:hover {
   color: var(--color2);
 }
-
 .contenedor-intro {
   width: 100%;
   padding-top: 80px;
@@ -124,12 +112,11 @@ nav > ul > li > a:hover {
       rgba(0, 0, 0, 0.829),
       rgba(0, 0, 0, 0.829)
     ),
-    url("images/code.jpeg");
+    url(images/code.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 }
-
 .intro {
   display: flex;
   flex-direction: column;
@@ -143,11 +130,8 @@ nav > ul > li > a:hover {
   border-radius: 10%;
   -webkit-border-radius: 10%;
   background-color: rgba(255, 255, 255, 0);
-  /* backdrop-filter: blur(0px);
-  -webkit-backdrop-filter: blur(0px); */
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
 }
-
 #Esteban {
   width: 240px;
   height: 240px;
@@ -155,7 +139,6 @@ nav > ul > li > a:hover {
   border: 3px solid var(--gris2);
   border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
 }
-
 @keyframes changeBorderRadius {
   0% {
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
@@ -164,25 +147,20 @@ nav > ul > li > a:hover {
     border-radius: 40% 60% 70% 30%/40% 70% 30% 60%;
   }
 }
-
 .text {
   padding: 10% 0;
   text-align: center;
-  color: white;
+  color: #fff;
 }
-
 .name {
   font-size: 1.3em;
 }
-
 .desc {
   font-size: 0.8em;
 }
-
 .hamburger-icon {
   display: none;
 }
-
 .contacto {
   display: flex;
   flex-direction: column;
@@ -191,105 +169,120 @@ nav > ul > li > a:hover {
   width: 100%;
   height: 100%;
 }
-
-.contacto > h2{
+.contacto > h2 {
   font-size: 1.4em;
   padding: 3% 10%;
   word-break: break-word;
   width: 80%;
   text-align: center;
 }
-
 .contacto > ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 50%;
+  width: 30%;
   font-size: 2em;
 }
-
-.contacto > ul > li > a{
+.contacto > ul > li > a {
   color: var(--gris2);
 }
-
-/* Responsive */
-
 @media (max-width: 767px) {
   .intro {
     width: 60%;
-    backdrop-filter: blur(7px);
   }
   ::-webkit-scrollbar {
-    width: 8px; /* Ancho del scrollbar */
+    width: 8px;
   }
   ::-webkit-scrollbar-track {
-    background-color: #f1f1f1; /* Color del fondo del scrollbar */
+    background-color: #f1f1f1;
   }
   ::-webkit-scrollbar-thumb {
-    background-color: #888; /* Color del thumb del scrollbar */
+    background-color: #888;
     border-radius: 15px;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Color del thumb del scrollbar al pasar el mouse sobre él */
+    background-color: #555;
   }
-
-  nav ul {
-    display: block;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #fff;
-    padding: 20px;
-    z-index: 999;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 0;
-    left: 100%;
-  }
-
-  nav.deployed ul {
+  .nav nav ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    opacity: 1;
-    left: 0;
-  }
-
-  .hamburger-icon {
-    display: inline-block;
-    cursor: pointer;
-    height: 100%;
-    top: 25%;
-    right: 10%;
-    transition: transform 0.3s;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
     z-index: 999;
+    transition: right 0.5s ease-in-out;
   }
 
-  .hamburger-icon i {
-    opacity: 1;
-    position: absolute;
-    transform: translate(50%, 50%);
-    transition: transform 0.3s, opacity 0.3s;
-    z-index: 1;
-  }
-
-  .hamburger-icon i:last-child {
-    z-index: 2;
-    opacity: 0;
-  }
-
-  .hamburger-icon.open i:first-child {
-    opacity: 0;
-  }
-
-  .hamburger-icon.open i:last-child {
-    opacity: 1;
-  }
-
-  nav.deployed a {
+  .nav a {
     color: #333;
     padding: 20% 0;
     font-size: 1.6em;
+  }
+
+  .nav nav.deployed ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    right: 0%;
+  }
+
+  .hamburger-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    height: 100%;
+    transition: transform 0.3s;
+    z-index: 999;
+    font-size: 1.5em;
+  }
+
+  .hamburger-icon i {
+    position: absolute;
+    transition: transform 0.3s ease, opacity 0.2s ease;
+  }
+
+  .hamburger-icon .fa-bars {
+    opacity: 1;
+    z-index: 1;
+  }
+
+  .hamburger-icon .fa-times {
+    opacity: 0;
+  }
+
+  .hamburger-icon.active .fa-bars {
+    opacity: 0;
+  }
+
+  .hamburger-icon.active .fa-times {
+    display: block;
+  }
+
+  .hamburger-icon .fa-bars.show {
+    opacity: 1;
+    transform: rotate(-90deg);
+  }
+
+  .hamburger-icon .fa-times.show {
+    display: inline-block;
+    opacity: 1;
+    transform: rotate(90deg);
+  }
+
+  .hamburger-icon .fa-bars.hide {
+    opacity: 0;
+    transform: rotate(90deg);
+  }
+
+  .hamburger-icon .fa-times.hide {
+    opacity: 0;
+    transform: rotate(90deg);
   }
 }
