--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,6 @@ header {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.header ul {
-}
-
 #inicio {
   min-height: 100vh;
   height: 100vh;
@@ -203,6 +200,11 @@ nav > ul > li > a:hover {
   ::-webkit-scrollbar-thumb:hover {
     background-color: #555;
   }
+
+  header{
+    padding: 0 8%;
+  }
+
   .nav nav ul {
     display: flex;
     flex-direction: column;
@@ -240,7 +242,7 @@ nav > ul > li > a:hover {
     height: 100%;
     transition: transform 0.3s;
     z-index: 999;
-    font-size: 1.5em;
+    font-size: 1em;
   }
 
   .hamburger-icon i {
