--- a/styles.css
+++ b/styles.css
@@ -160,24 +160,24 @@ nav > ul > li > a:hover {
 }
 .contacto {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
 }
 .contacto > h2 {
-  font-size: 1.4em;
-  padding: 3% 10%;
+  font-size: 2em;
+  padding-left: 20%;
   word-break: break-word;
-  width: 80%;
+  width: 50%;
   text-align: center;
 }
 .contacto > ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 30%;
+  width: 50%;
+  padding: 0 15%;
   font-size: 2em;
 }
 .contacto > ul > li > a {
@@ -201,7 +201,7 @@ nav > ul > li > a:hover {
     background-color: #555;
   }
 
-  header{
+  header {
     padding: 0 8%;
   }
 
@@ -223,7 +223,7 @@ nav > ul > li > a:hover {
   .nav a {
     color: #333;
     padding: 20% 0;
-    font-size: 1.6em;
+    font-size: 1.3em;
   }
 
   .nav nav.deployed ul {
@@ -286,5 +286,24 @@ nav > ul > li > a:hover {
   .hamburger-icon .fa-times.hide {
     opacity: 0;
     transform: rotate(90deg);
+  }
+
+  .contacto {
+    flex-direction: column;
+  }
+
+  .contacto > h2{
+    width: 100%;
+    padding: 3% 15%;
+    font-size: 1.7em;
+  }
+
+  .contacto ul{
+    width: 100%;
+    padding: 2% 25%;
+  }
+
+  .no-scroll {
+    overflow: hidden;
   }
 }
